getting more scaffolding set up and responsive nav bar

--- a/src/Styles/skeleton.css
+++ b/src/Styles/skeleton.css
@@ -120,12 +120,6 @@ html is set to 62.5% so that all the REM measurements throughout Skeleton
 are based on 10px sizing. So basically 1.5rem = 15px :) */
 html {
   font-size: 62.5%; }
-body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
-  font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
 
 
 /* Typography
@@ -400,19 +394,44 @@ near the relevant code. For example, if you wanted to change the styles for butt
 on small devices, paste the mobile query code up in the buttons section and style it
 there.
 */
-
+nav {
+  z-index: 2;
+  background: #FFFFFF;
+  padding-top: 2.5em ;
+  padding-bottom: 2.5em ;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
 
 /* Larger than mobile */
-@media (min-width: 400px) {}
+@media (min-width: 400px) {
+
+
+}
 
 /* Larger than phablet (also point when grid becomes active) */
 @media (min-width: 550px) {}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+  nav {
+    margin: 0 auto;
+    position: relative;
+    top: 0;
+    bottom: initial;
+  }
+}
+
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+
+
+}
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+
+}
