--- a/src/Styles/skeleton.css
+++ b/src/Styles/skeleton.css
@@ -405,6 +405,18 @@ nav {
   bottom: 0;
 }
 
+.techInfo {
+  margin-top: 5em;
+  margin-right: 5em;
+  margin-bottom: 4em;
+  margin-left: 0;
+  max-width: 15em;
+}
+
+.techWrap{
+margin: 0 auto;
+}
+
 /* Larger than mobile */
 @media (min-width: 400px) {
 
@@ -412,7 +424,17 @@ nav {
 }
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+
+  @@media (min-width: 618px) {
+    .techInfo {
+      margin: 0 auto;
+    }
+
+    .techWrap {
+      display: flex;
+      justify-content: center;
+    }
+}
 
 /* Larger than tablet */
 @media (min-width: 750px) {
@@ -423,6 +445,8 @@ nav {
     bottom: initial;
   }
 }
+
+
 
 
 /* Larger than desktop */
